--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Gorilla</title>
+        <title>Dinosaurdiscoverin Rwanda</title>
     </head>
     <body>
-        <h1>The Mountain Gorilla </h1>
-        <h2>  This is one Mountain Gorilla in Rwanda</h2>
-        <P><img src="https://scx2.b-cdn.net/gfx/news/2019/rwandasgoril.jpg" alt="Rwanda Gorilla" width="480"  height="300">
-        <p> Most Mountanins Gorilla are Huge as well as Beautiful.</p>
-        <p>The Gorillas are mostly black colors.</p>
-        <p>The Gorillas are so friendly as human being</P>
-        <p>Gorillas are strong</p>
+        <h1>This is a dinosaur </h1>
+        <h2>  This is a dinosaur in Rwanda</h2>
+        <P><img src="https://scx2.b-cdn.net/gfx/news/2019/rwandasgoril.jpg" alt="Dinosaur in rwanda" width="480"  height="300">
+        <p> MostThis is a dinosaur are Huge as well as Beautiful.</p>
+        <p>The dinosaurs  mostly used to be blown and green colors.</p>
+        <p>The dinosaur are so friendly as human being</P>
+        <p>Dinosaur are strong</p>
         </p>And are also the only animals;<P>
 
-        </P>in the plane that looks
-         similar to Humans.</p>
+        </P>in the plane that does not looks like
+        any other any animal in the planet.</p>
+        
          <p> I love visiting them and I Felt happy,
              the first time I saw them.</p>
 
